# hust-network-login

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
debian/: hust-network-login.service  hust-network-login@.service
src/: encrypt.rs  main.rs
