[package]
name = "hust-network-login"
version = "0.1.2"
authors = ["black-binary <blackbinary@qq.com>"]
edition = "2021"

[dependencies]
minreq = {version = "2.6", features = [], default-features = false}
urlencoding = "2.1"
num-bigint = "0.4.3"

[profile.release]
lto = "fat"
opt-level = 'z'
panic = 'abort'
strip = true